# GEO

./: .env.production.example  .gitattributes  .gitignore  Claude.md  FEATURES.md  improvements-plan.md  mvp-scope.md  now-lets-make-a-lively-bonbon.md  pending.md  seenby-overview.md  so-far-the-functionalities-distributed-cray.md
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ef658851600_create_reports_table.py  2a685d803d33_create_scan_query_sources_table.py  3b7c9d2e4f1a_add_hallucination_flagged_to_scan_query_results.py  4e1efb854b87_add_internal_notes_to_clients.py  51b4eb5916db_add_site_audits_and_llms_full.py  53304d0628ae_add_page_audits_and_deliverables.py  a1b2c3d4e5f6_create_action_recommendations_table.py  a1b2c3d4e5f6_enable_rls_scan_query_sources.py  a1f2b3c4d5e6_add_revenue_fields_to_clients.py  a2b3c4d5e6f7_create_dimension_assessments.py  a7b8c9d0e1f2_create_content_briefs_table.py  b1c2d3e4f5a6_add_change_narrative_to_reports.py  b2c3d4e5f6a7_add_manual_score_evidence_to_clients.py  (+23 more)
backend/app/: main.py
backend/scripts/: seed_demo_clients.py  seed_helpers.py
backend/tests/: conftest.py  test_ai_readiness_service.py  test_ai_traffic_model.py  test_alert_service.py  test_api_activity.py  test_api_citability.py  test_api_client_view.py  test_api_client_view_deliverables.py  test_api_clients.py  test_api_competitors.py  test_api_content_gaps.py  test_api_content_roadmap.py  test_api_control_queries.py  test_api_deliverables.py  test_api_ga4_sync.py  test_api_guarantee.py  test_api_provenance.py  test_api_scans.py  test_api_site_audit.py  test_api_toolkit.py  test_assessment_authority.py  test_assessment_endpoints.py  test_assessment_service.py  test_authority_api.py  test_authority_models.py  test_authority_service.py  test_benchmark_service.py  test_brand_detection.py  test_budget_service.py  test_causality_service.py  test_circuit_breaker.py  test_citability_models.py  test_citability_service.py  test_claude_action.py  test_client_list_service.py  test_client_view_causality.py  test_client_view_guarantee.py  test_competitor_intelligence.py  test_competitor_trends.py  test_content_analysis_service.py  (+46 more)
backend/workers/: celery_app.py
(+335 files in other folders)
