[tool.poetry]
name = "seenby-backend"
version = "0.1.0"
description = "SeenBy backend API and workers"
authors = ["Faris <farisirfanyaakob@gmail.com>"]
packages = [{include = "app"}, {include = "workers"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0"
alembic = "^1.14"
celery = {extras = ["redis"], version = "^5.4"}
redis = "^5.2"
google-genai = "^1.0"
openai = "^2.0"
pydantic-settings = "^2.6"
psycopg2-binary = "^2.9"
structlog = "^24.4"
python-dotenv = "^1.0"
anthropic = "^0.50"
resend = "^2.0"
httpx = "^0.28"
weasyprint = "^62"
boto3 = "^1.35"
beautifulsoup4 = "^4.12"
lxml = "^5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-mock = "^3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
